# final-qa-validator

./: README.md  gitignore  gitignore.txt  main.py  pyproject.toml  requirements.txt
